@@ -41,7 +41,7 @@
           <span>Provider:</span>
         </dt>
         <dd>
-          <a href="" tal:attributes="href context/getProvider_url" tal:content="value" />
+          <a href="" tal:attributes="href python:context.getProvider_url()[0]" tal:content="value" />
         </dd>
       </tal:block>
 
